# soil-sensor-unit

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  README.md  SSU.sublime-project  lpc_flash1.ld
cmake/: mcuboot.cmake  mcuboot.cmake~8bf3dc9... chore
cmake/arm-cmake-toolchains/: utils.cmake
lib/: CMakeLists.txt
lib/SEGGER/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
lib/STM32G0xx_CMSIS/: Release_Notes.html
lib/STM32G0xx_HAL_Driver/: Release_Notes.html
lib/STM32G0xx_HAL_Driver/Inc/: stm32_assert.h
lib/etl/: CMakeLists.txt
lib/etl/include/etl/: crc32.h
lib/sml/: CMakeLists.txt
lpc_chip_82x/: CMakeLists.txt
lpc_chip_82x/inc/: romapi_8xx.h
src/: assert_impl.cc  bootloader.cc  bootloader.h  bootloader_interface.h  common.h  config.h  config_storage.cc  config_storage.h  expect.h  fw_update.h  globals.cc  globals.h  hardware.cc  hardware.h  isr.cc  led.cc  led.h  log.c  log.cc  log.h  main.c  main.cc  measure.c  measure.cc  measure.h  modbus.c  modbus.cc  modbus.h  modbus_callbacks.c  modbus_callbacks.h  modbus_data.cc  modbus_data.h  modbus_data_fw_update.cc  modbus_data_fw_update.h  modbus_data_interface.h  modbus_hw.c  modbus_hw.cc  modbus_hw.h  modbus_hw_interface.h  modbus_serial.cc  (+7 more)
src/boot/: bootloader.cc  bootloader.h  flash_map_backend.c  flash_map_backend.cc  main.c
src/boot/include/flash_map_backend/: flash_map_backend.h
src/boot/include/mcuboot_config/: mcuboot_config.h
src/boot/include/sysflash/: sysflash.h
src/bsp/: bootloader.cc  bootloader.h  bsp.cc  bsp.h  isr.cc  log.h  log_rtt.cc  modbus_serial.cc  modbus_serial.h
src/config/: SEGGER_RTT_Conf.h  config.h  config_defaults.h  lpc_flash1.ld  version.h.in
src/config/linker/: boot.ld  common.ld  firmware.ld  flash_map.ld  memory.ld  memory_stm32g071x8.ld
src/modbus/: data_interface.h  modbus.cc  modbus.h  protocol_interface.h  rtu_protocol.h  rtu_protocol_internal.h  serial_interface.h  slave.cc  slave.h
test/: CMakeLists.txt  modbus_data_fw_update_test.cc  modbus_test.cc
test/modbus/: modbus_test.cc  rtu_protocol_test.cc
